css/main.css
/* ... */
.shape-contain {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  width: 65vw;
  min-height: 80vh;
  grid-column: 1/4;
  grid-row: 2/3;
  justify-self: center;
  align-self: end;
  position: relative;
}

.shape-contain .shape {
  display: block;
  position: absolute;
  top: 30%;
  bottom: auto;
}

.shape a:hover, .shape a:active, .shape a:focus {
  outline: 0;
}

.subtitle-container {
  grid-column: 2/3;
  display: inline-block;
  margin-block-start: 1em;
  margin-block-end: 1em;
}

.subtitle-container .main-title, .subtitle-container .subtitle {
  display: inline;
}

.subtitle-container .main-title {
  font-size: 1.5rem;
  font-family: Nordique Pro Semibold;
  font-weight: 400;
  display: inline-block;
  margin: 0;
}

.subtitle-container .subtitle {
  font-size: 1.5rem;
  font-family: Nordique Pro Light;
  font-weight: 400;
  display: inline-block;
  margin: 0;
}

#main-blurb {
  grid-column: 3/4;
  font-size: 0.9rem;
  font-family: Futura PT Light;
  font-weight: 400;
}

#sub-default {
  display: none;
}

.speakers-container .side-nav {
  display: hidden;
}

.speakers-container {
  width: 100%;
  height: 100vh;
  padding: 3rem 40px;
}

.speakers-container .speaker-list-wrapper {
  display: flex;
  width: 100%;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  font-family: Futura PT;
  border-top: 2px solid black;
}

.speaker-list-wrapper .speaker-box {
  display: inline-block;
  margin-bottom: 0.75rem;
}

.speaker-box h2 {
  margin: 0;
  line-height: 1.25;
  font-weight: 500;
}

.speaker-box p {
  margin: 0;
  line-height: 1;
  font-weight: 100;
}

.photo-area {
  height: 100%;
}

.photo-area img {
  display: none;
}

#schedule-box.negate.hidden {
  display: inline-block !important;
}

.schedule-container {
  display: inline-block;
  width: 99%;
  height: auto;
  margin-top: 3rem;
  border-top: 2px solid black;
}

.schedule-container h3 {
  font-family: Futura PT;
  font-weight: 400;
  color: black;
  font-size: 1.5rem;
}

.schedule {
  list-style: none;
  display: flex;
  flex-direction: column;
}

.schedule .schedule-item {
  margin: 0.25rem 0;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  border-bottom: 1px solid grey;
}

.schedule .schedule-item p {
  display: inline-block;
  margin: 0;
  font-size: 1.25rem;
}

.schedule .schedule-item .item-header {
  font-family: Futura PT Light;
}

.schedule .schedule-item .item-time {
  font-family: Futura PT Light;
}

.schedule .schedule-item.gap-item {
  margin: 1.5rem 0;
}

.ws-side-nav {
  display: none;
}

@media only screen and (min-width: 600px) {
  /* For tablets: */
  .splash-container {
    grid-template-columns: 1fr auto 1fr;
    padding: 40px;
  }

  .shape-contain {
    grid-column: 1/4;
    grid-row: 2/3;
    width: 65vw;
    min-height: 80vh;
  }

  .shape-contain .shape {
    top: 20%;
    bottom: auto;
  }

  .splash-container {
    grid-column-gap: 14px;
    grid-template-columns: min-content 1fr 1fr;
  }

  .subtitle-container {
    margin-block-start: 1em;
    margin-block-end: 1em;
  }

  .subtitle-container .main-title {
    font-size: 1.5rem;
  }

  .subtitle-container .subtitle {
    font-size: 1.5rem;
    padding-left: 0.75rem;
  }

  .subtitle-container .subtitle {
    font-size: 1.5rem;
    padding-left: 0;
  }

  #sub-default {
    display: inline-block;
  }
}
@media only screen and (min-width: 768px) {
  .shape-contain .shape {
    top: 10%;
    bottom: auto;
  }

  .shape-contain {
    grid-column: 1/4;
    grid-row: 2/3;
    width: 50vw;
    min-height: 80vh;
  }

  .subtitle-container {
    margin-block-start: 0.5rem;
  }

  .subtitle-container .main-title {
    font-size: 2.5rem;
  }

  .subtitle-container .subtitle {
    font-size: 2.5rem;
    padding-left: 0.5rem;
  }

  #main-blurb {
    margin: 0;
    padding-top: 1rem;
  }
}
/* ... */

